--- a/package.json
+++ b/package.json
@@ -8,15 +8,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.5",
     "@heroicons/react": "^1.0.6",
+    "axios": "^0.27.2",
+    "graphql": "^16.5.0",
+    "moment": "^2.29.4",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-cookie": "^4.1.1",
+    "react-dom": "^18.0.0",
+    "react-toastify": "^9.0.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.36",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
+    "dotenv": "^16.0.1",
     "postcss": "^8.4.14",
     "react-router-dom": "^6.3.0",
     "tailwindcss": "^3.0.24",
